--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/localizations": "^1.11.3",
     "@clerk/nextjs": "^4.16.4",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.28.0",
@@ -21,9 +22,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
+    "tailwindcss-animate": "^1.0.5",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@clerk/types": "^3.35.3",
     "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
@@ -37,7 +40,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
-    "prisma": "^4.11.0",
+    "prisma": "^4.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
   },
